Fix disabled cell alignment and cell modal sizing

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -14,7 +14,6 @@
 .disabled {
     background-color: #786961;
     transform: scale(.75);
-    margin: 16px;
 }
 
 .cell-img {
