--- a/src/components/CellActions/CellActions.scss
+++ b/src/components/CellActions/CellActions.scss
@@ -1,19 +1,17 @@
 .cell-info {
     position: absolute;
     bottom: 110%;
-    left: -250%;
-    background-color: white;
+    left: -270%;
+    background-color: #f4f4f4;
+    margin-top: 0.8em;
     display: flex;
     flex-direction: column;
     border-radius: 1em;
-    padding: 1em;
-    z-index: 1;
-    width: 12em
+    padding: 10px;
 }
 
 .cell-actions {
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -28,12 +26,15 @@
     display: flex;
     align-items: center;
     padding: 0.4em;
+    margin: .5em;
 }
 
-.card-image{
+.card-image {
+    height: 7em;
+    object-fit: cover;
     border-radius: 1em;
 }
 
-.plant-icon{
+.plant-icon {
     padding-left: 0.3em
 }
